# kr-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
spec/: api.feature
src/: main.rs  sign.rs
src/otpshka/: hotp.rs  mod.rs  totp.rs
