[package]
name = "kr-api"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies]
ring = "0.16"
serde_json = "1"
cucumber_rust = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt"] }
